WEBページとしての表示を整理
トップページ、エラーページを追加

--- a/parts/header.html
+++ b/parts/header.html
@@ -11,7 +11,9 @@
         </div>
         <div class="collapse navbar-collapse" id="topmenu">
             <ul class="nav navbar-nav">
-                <li><a href="#">1年次</a></li>
+                <li><a href="index.php?page=timetable1">
+                    1年次
+                </a></li>
                 <li><a href="#">メニューＢ</a></li>
                 <li><a href="#">メニューＣ</a></li>
             </ul>
